Fixing overlap
using overflow-y: scroll

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ header {
   display: inline-block;
   text-align: right;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .container {
